--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,3 +14,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+input:focus {
+  outline: none; /* Removes the default outline on focus */
+  border: none; /* Removes any border on focus */
+}
+
