--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,4 +18,7 @@ input:focus {
   outline: none; /* Removes the default outline on focus */
   border: none; /* Removes any border on focus */
 }
+.custom-shadow{
+  box-shadow: 5px 5px 10px rgba(0,0,0,0.1);
+}
 
